--- a/Assignment3/appsettings.json
+++ b/Assignment3/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Assignment3Context": "Server=(localdb)\\mssqllocaldb;Database=Assignment3Context-60525722-413e-4cb0-ac0f-bd516541b7eb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ComponentDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+
   }
 }
