--- a/Assignment3/appsettings.json
+++ b/Assignment3/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ComponentDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:itwebassignment3.database.windows.net,1433;Initial Catalog=ITWEB_Assignment3;Persist Security Info=False;User ID=ITWEB;Password=Test1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   }
 }
