I FIXED THEM ALL

--- a/Assignment3/Assignment3.csproj
+++ b/Assignment3/Assignment3.csproj
@@ -5,6 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181125185931_update.cs" />
+    <Compile Remove="Migrations\20181125185931_update.Designer.cs" />
+    <Compile Remove="Migrations\20181125191305_update.cs" />
+    <Compile Remove="Migrations\20181125191305_update.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
