--- a/Assignment3/Properties/launchSettings.json
+++ b/Assignment3/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:52390",
+      "applicationUrl": "http://localhost:52390/",
       "sslPort": 44392
     }
   },
