--- a/Assignment3/Properties/launchSettings.json
+++ b/Assignment3/Properties/launchSettings.json
@@ -18,6 +18,8 @@
     "Assignment3": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "login/login",
+
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
